--- a/app/globals.css
+++ b/app/globals.css
@@ -18,5 +18,10 @@
 
 body {
   background: #f5f5f5;
-  @apply overflow-x-hidden;
 }
+
+#contact:hover {
+  color: #fff !important;
+  background-color: #00534E !important;
+  text-decoration: none;
+  }
